--- a/sheet.css
+++ b/sheet.css
@@ -2,7 +2,7 @@
     --color-bg: #282828;
     --color-fg: #EADBB2;
     --color-link: #8F9191;
-    --color-link-visited: #668F8B;
+    --color-link-visited: #8F9191;
     --color-link-hover: #FA7921 ;
 }
 
